Changed sensitivities in exit site infections form to a text area instead of text field.

--- a/app/views/exit_site_infections/_form.html.haml
+++ b/app/views/exit_site_infections/_form.html.haml
@@ -43,5 +43,5 @@
   = e.select :antibiotic_3_route, medication_routes(e.object.class.name.constantize), { prompt: "Please select route of administration" } 
 
   = e.label :sensitivities
-  = e.text_field :sensitivities
+  = e.text_area :sensitivities, :cols => 50, :rows => 6
 
