Adjusted naming of polymorphic association for medication model.

--- a/app/views/patients/_medication_fields.html.haml
+++ b/app/views/patients/_medication_fields.html.haml
@@ -13,7 +13,7 @@
 
     %ul.no-bullet.drug-results
 
-    = pm.hidden_field :medicate_with_id, :class => "selected-medication-id"
+    = pm.hidden_field :medicatable_id, :class => "selected-medication-id"
 
   / Only show this for ESA/ Imnosupressnt.
   .esa-or-immno
