--- a/app/views/patients/_exit_site_table.html.haml
+++ b/app/views/patients/_exit_site_table.html.haml
@@ -75,7 +75,7 @@
                   %li.toggle-content
                     = "Antibiotic: #{e.antibiotic_3.name}, Route: #{e.antibiotic_routes.third.name},"
                   %li.toggle-content
-                    = "Sensitivities: #{e.sensitivities}"
+                    = "sensitivity: #{e.sensitivity}"
                   
         %td{:data => { :heading => "Entered By"}, valign: "top"}
           = e.user_id
