--- a/app/views/patients/_peritonitis_table.html.haml
+++ b/app/views/patients/_peritonitis_table.html.haml
@@ -109,7 +109,7 @@
                   %li.toggle-content
                     = "#{p.antibiotic_5.name} - #{p.antibiotic_routes.fifth.name},"
                   %li.toggle-content
-                    = "Sensitivities: #{p.sensitivities}"
+                    = "sensitivity: #{p.sensitivity}"
 
         %td{:data => { :heading => "Entered By"}, valign: "top"}
           = p.user_id
