--- a/app/views/peritonitis_episodes/_peritonitis_form.html.haml
+++ b/app/views/peritonitis_episodes/_peritonitis_form.html.haml
@@ -97,8 +97,8 @@
           = p.text_area :notes, :cols => 50, :rows => 6
         
         .large-6.columns
-          = p.label :sensitivities, "Sensitivities (Antibiotics)"
-          = p.text_area :sensitivities, :cols => 50, :rows => 6
+          = p.label :sensitivity, "sensitivity (Antibiotics)"
+          = p.text_area :sensitivity, :cols => 50, :rows => 6
 
 
     .row        
