--- a/app/assets/stylesheets/foundation/globals.css.scss
+++ b/app/assets/stylesheets/foundation/globals.css.scss
@@ -51,3 +51,13 @@ fieldset {
   font-size: 0.9em;
 }
 
+.underline {
+  border-bottom: 0.1em solid #008cba;
+  padding-bottom: 0.1em;
+  margin-bottom: 0.6em;
+}
+
+.button-padding {
+  padding-top: 1em;
+}
+
