--- a/app/views/patients/manage_medications.html.haml
+++ b/app/views/patients/manage_medications.html.haml
@@ -15,7 +15,7 @@
     = hidden_field_tag :redirect_url, manage_medications_patient_path(@patient)
    
     = f.fields_for :medications, @patient.active_medications do |pm|
-      / - binding.pry
+    
       - if pm.object.new_record?
         
         #new-form
@@ -41,9 +41,9 @@
         
         %dl.accordion{data: {accordion: true} }
           %dd.accordion-navigation.med-form
-            %a.fi-plus.fi-minus{href: "#edit-meds-#{pm.object.id}", :class => "drug-#{pm.object.medication_type.downcase}"}
-              
-              = "#{pm.object.medicatable.name}, #{pm.object.dose}, route, #{pm.object.frequency}, #{pm.object.date}"
+            %a.fi-plus.fi-minus{href: "#edit-meds-#{pm.object.id}", :class => "drug-#{pm.object.medication_type}"}
+             
+              = "#{pm.object.medicatable.name}, #{pm.object.dose}, #{pm.object.medication_route.name}, #{pm.object.frequency}, #{pm.object.date}"
               .right.edit
                 Edit
 
