--- a/app/assets/stylesheets/foundation/medications.css.scss
+++ b/app/assets/stylesheets/foundation/medications.css.scss
@@ -16,6 +16,18 @@
   border-radius: 0.5em;
 }
 
+.accordion dd > a.drug-antibiotic, li.drug-antibiotic, tbody tr.drug-antibiotic {
+  background: #FFFFFF;
+  padding: 0;
+  border-radius: 0.5em;
+}
+
+.accordion dd > a.drug-peritonitis, li.drug-peritonitis, tbody tr.drug-peritonitis {
+  background: #FFFFFF;
+  padding: 0;
+  border-radius: 0.5em;
+}
+
 .med-form.content ul.drug-results {
   height: 15em;
   padding: 1em;
