--- a/app/views/patients/_medication_fields.html.haml
+++ b/app/views/patients/_medication_fields.html.haml
@@ -4,7 +4,7 @@
   = pm.hidden_field :patient_id
 
   = pm.label :medication_type, "Medication Type"
-  = pm.select :medication_type, drug_select_options(pm.object.medication_type), { :prompt => "Select drug by category/type or use the search option below" },  { :class => "medication-type-select" } 
+  = pm.select :medication_type, drug_select_options(pm.object.medication_type), { :prompt => "Select drug by category/type or use the search option below", include_blank: true }, { :class => "medication-type-select" } 
 
   / Only show this for standard
   .standard
