--- a/app/views/peritonitis_episodes/edit.html.haml
+++ b/app/views/peritonitis_episodes/edit.html.haml
@@ -15,10 +15,11 @@
       = field_set_tag do                  
         .row
           = render partial: "peritonitis_episodes/peritonitis_form", locals: { p: p }
+      
+        .row.button-padding
+          = submit_tag "Update Peritonitis Episode", class: "button tiny right"
 
-        = submit_tag "Update Peritonitis Episode", class: "button tiny right"
-
-        = link_to "Cancel", pd_info_patient_path(@patient), class: "button tiny left cancel"
+          = link_to "Cancel", pd_info_patient_path(@patient), class: "button tiny left cancel"
 
 .wide-screen
   = content_for :secondary_nav do  
