--- a/app/views/patients/_medication_fields.html.haml
+++ b/app/views/patients/_medication_fields.html.haml
@@ -2,7 +2,7 @@
   = pm.hidden_field :id
 
   = pm.hidden_field :patient_id
-
+  
   = pm.label :medication_type, "Medication Type"
   = pm.select :medication_type, drug_select_options(pm.object.medication_type), { :prompt => "Select drug by category/type or use the search option below", include_blank: true }, { :class => "medication-type-select" } 
 
@@ -17,7 +17,7 @@
     = pm.hidden_field :medicatable_type, value: "Drug", :class => "selected-medicatable-type"
 
   / Only show this for ESA/ Imnosupressnt.
-  .esa-or-immno
+  .drug-by-select
     = pm.label :drug_select, "Select Drug"
     = pm.collection_select :drug_select, drugs_for(pm.object.medication_type), :id, :name, {}, :class => "drug-select"
 
