Updated peritonitis_episode form/table and medication_fields to include fluid descriptions and episode types and set value for hidden patient_id field in medications form.

--- a/app/views/patients/_peritonitis_table.html.haml
+++ b/app/views/patients/_peritonitis_table.html.haml
@@ -50,7 +50,7 @@
                   %li
                     = "Abdominal Pain: #{p.abdominal_pain}"
                   %li
-                    = "Fluid Description: #{p.fluid_description_id}"
+                    = "Fluid Description: #{p.fluid_description.description}"
           
         %td{ :data => { :heading => "Organisms"}, valign: "top" } 
           %dl.accordion{ data: { accordion: true } }
@@ -68,7 +68,7 @@
           %dl.accordion{ data: { accordion: true } }
             %dd.accordion-navigation
               %a.fi-plus.fi-minus.toggle-notes{ :id => "patient-peritonitis-episode-type-#{p.id}", href: "#patient-peritonitis-episode-type-#{p.id}" }
-                = p.episode_type_id
+                = p.episode_type.term
               .content.toggle-content{ :id => "patient-peritonitis-episode-type-#{p.id}" } 
                 = "Catheter Removed: #{p.catheter_removed}"
                             
