--- a/app/views/patients/_medication_fields.html.haml
+++ b/app/views/patients/_medication_fields.html.haml
@@ -1,7 +1,7 @@
 .med-form.content{:id => "edit-meds-#{pm.object.id}"}
   = pm.hidden_field :id
 
-  = pm.hidden_field :patient_id
+  = pm.hidden_field :patient_id, value: @patient.id
   
   = pm.label :medication_type, "Medication Type"
   = pm.select :medication_type, drug_select_options(pm.object.medication_type), { :prompt => "Select drug by category/type or use the search option below", include_blank: true }, { :class => "medication-type-select" } 
