Restricted drug select field in peritonitis forms to only display peritonitis drugs list and not in regular medication forms.

--- a/app/views/peritonitis_episodes/_peritonitis_form.html.haml
+++ b/app/views/peritonitis_episodes/_peritonitis_form.html.haml
@@ -96,11 +96,10 @@
           = p.label :notes, "Episode notes"
           = p.text_area :notes, :cols => 50, :rows => 6
 
-
     .row        
       .large-12.columns
         .form-section
-          Antibiotics
+          Medications administered for this peritonitis episode
         
         = p.fields_for :medications, @peritonitis_episode.medications do |pm|
                     
