--- a/app/views/patients/_medication_fields.html.haml
+++ b/app/views/patients/_medication_fields.html.haml
@@ -3,23 +3,33 @@
 
   = pm.hidden_field :patient_id, value: @patient.id
   
-  = pm.label :medication_type, "Medication Type"
-  = pm.select :medication_type, drug_select_options(pm.object.medication_type), { :prompt => "Select drug by category/type or use the search option below", include_blank: true }, { :class => "medication-type-select" } 
+  - if pm.object.treatable_type == "PeritonitisEpisode"
+    
+    .select-peritonitis-drug
+      = pm.label :drug_select, "Select Drug (peritonitis drugs only)"
+      = pm.collection_select :drug_select, Drug.peritonitis, :id, :name, {}, :class => "drug-select"
+    
+  - else 
+    
+    .medication-type-field
+      = pm.label :medication_type, "Medication Type"
+      = pm.select :medication_type, drug_select_options(pm.object.medication_type), { :prompt => "Select drug by category/type or use the search option below", include_blank: true }, { :class => "medication-type-select" } 
+    
+    / Search all drugs
+    .standard
+      = label_tag :drug_search, "Drug"
+      = text_field_tag :drug_search, pm.object.persisted? ? pm.object.medicatable.name : nil, :class => "find_drug", :placeholder => "Search drug by name or type"
 
-  / Only show this for standard
-  .standard
-    = label_tag :drug_search, "Drug"
-    = text_field_tag :drug_search, pm.object.persisted? ? pm.object.medicatable.name : nil, :class => "find_drug", :placeholder => "Search drug by name or type"
+      %ul.no-bullet.drug-results
 
-    %ul.no-bullet.drug-results
+      = pm.hidden_field :medicatable_id, :class => "selected-medicatable-id"
+      = pm.hidden_field :medicatable_type, value: "Drug", :class => "selected-medicatable-type"
 
-    = pm.hidden_field :medicatable_id, :class => "selected-medicatable-id"
-    = pm.hidden_field :medicatable_type, value: "Drug", :class => "selected-medicatable-type"
+    / Show only when selecting drugs by category/type.
+    .drug-by-select
+      = pm.label :drug_select, "Select Drug"
+      = pm.collection_select :drug_select, drugs_for(pm.object.medication_type), :id, :name, {}, :class => "drug-select"
 
-  / Only show this for ESA/ Imnosupressnt.
-  .drug-by-select
-    = pm.label :drug_select, "Select Drug"
-    = pm.collection_select :drug_select, drugs_for(pm.object.medication_type), :id, :name, {}, :class => "drug-select"
 
   / Same for both
   = pm.label :dose
