--- a/app/views/patients/manage_medications.html.haml
+++ b/app/views/patients/manage_medications.html.haml
@@ -41,7 +41,7 @@
         
         %dl.accordion{data: {accordion: true} }
           %dd.accordion-navigation.med-form
-            %a.fi-plus.fi-minus{href: "#edit-meds-#{pm.object.id}", :class => "drug-#{med_color_tag(pm.object.medication_type)}"}
+            %a.fi-plus.fi-minus{href: "#edit-meds-#{pm.object.id}", :class => "drug-#{drug_types_colour_tag(pm.object.medicatable.drug_types)}"}
              
               = "#{pm.object.medicatable.name}, #{pm.object.dose}, #{pm.object.medication_route.name}, #{pm.object.frequency}, #{pm.object.date}"
               .right.edit
