--- a/app/views/patients/_medication_fields.html.haml
+++ b/app/views/patients/_medication_fields.html.haml
@@ -7,8 +7,11 @@
     
     .select-peritonitis-drug
       = pm.label :drug_select, "Select Drug (peritonitis drugs only)"
-      = pm.collection_select :drug_select, Drug.peritonitis, :id, :name, {}, :class => "drug-select"
-    
+      = pm.collection_select :drug_select, Drug.peritonitis, :id, :name, {prompt: "Please select drug used to treat this episode of peritonitis" }, :class => "peritonitis-drug-select"
+
+      = pm.hidden_field :medicatable_id, :class => "selected-medicatable-id"
+      = pm.hidden_field :medicatable_type, value: "Drug", :class => "selected-medicatable-type"
+
   - else 
     
     .medication-type-field
