--- a/app/views/patients/_medication_fields.html.haml
+++ b/app/views/patients/_medication_fields.html.haml
@@ -6,10 +6,9 @@
   - if pm.object.treatable_type == "PeritonitisEpisode"
     
     .select-peritonitis-drug
-      = pm.label :drug_select, "Select Drug (peritonitis drugs only)"
-      = pm.collection_select :drug_select, Drug.peritonitis, :id, :name, {prompt: "Please select drug used to treat this episode of peritonitis" }, :class => "peritonitis-drug-select"
+      = pm.label :medicatable_id, "Select Drug (peritonitis drugs only)"
+      = pm.collection_select :medicatable_id, Drug.peritonitis, :id, :name, {prompt: "Please select drug used to treat this episode of peritonitis" }, :class => "peritonitis-drug-select"
 
-      = pm.hidden_field :medicatable_id, :class => "selected-medicatable-id"
       = pm.hidden_field :medicatable_type, value: "Drug", :class => "selected-medicatable-type"
 
   - else 
