Added fields for organisms and sensitivities within creating a peritonitis episode.

--- a/app/assets/stylesheets/foundation/toggle.css.scss
+++ b/app/assets/stylesheets/foundation/toggle.css.scss
@@ -26,6 +26,24 @@
   }
 }
 
+#new-organism-form:target {
+  .hide {
+    display: block;
+  }
+
+  .close-new-form {
+    display: inline-block;
+  }
+
+  .toggle {
+    display: none;
+  }
+}
+
+.close-new-organism-form {
+  display: none;
+}
+
 .close-new-form {
   display: none;
 }
