--- a/app/views/patients/_clin_sum_sub_nav.html.haml
+++ b/app/views/patients/_clin_sum_sub_nav.html.haml
@@ -1,4 +1,4 @@
-%dt  
+%dt
   %dd.remove-name.patient-name{role: "menuitem"}
     = link_to "#{@patient.full_name}", clinical_summary_patient_path(@patient), :title => "Clinical Summary", :"data-tooltip aria-haspopup" => true
   %dd{role: "menuitem"}
@@ -6,7 +6,7 @@
   %dd{role: "menuitem"}
     = link_to "Admin", demographics_patient_path(@patient), :title => "Demographics"
   %dd{role: "menuitem"}
-    = link_to "Modal", modality_patient_path(@patient), :title => "Patient Modality"
+    = link_to "Modal", patient_patient_modalities_path(@patient), :title => "Patient Modality"
   %dd{role: "menuitem"}
     = link_to "Problems (#{@patient.patient_problems.length})", problems_patient_path(@patient), :title => "Manage Problems"
   %dd{role: "menuitem"}
