--- a/app/views/patients/death_update.html.haml
+++ b/app/views/patients/death_update.html.haml
@@ -1,7 +1,7 @@
 .main-content
   .row.g-center
     = render partial: "patients/patient_info_header", locals: { model: @patient }
-  
+
   .row
     = render partial: "patients/mini_renal_profile", locals: { model: @patient }
 
@@ -16,12 +16,12 @@
 .row
   .large-12.columns
     = form_for @patient, :method => :put do |f|
-      = hidden_field_tag :redirect_url, modality_patient_path(@patient)
+      = hidden_field_tag :redirect_url, new_patient_patient_modality_path(@patient)
       = hidden_field_tag :template, "death_update"
 
       = f.label :death_date, "Date of Death"
       = f.date_select(:death_date, {start_year: (120.years.ago).year, end_year: Time.now.year, order: [:day, :month, :year], include_blank: true}, class: "datetime")
-      
+
       = f.label :first_edta_code_id, "EDTA Cause of Death (1)"
       = f.collection_select :first_edta_code_id, EdtaCode.all, :id, :death_cause, {:prompt => "Select 1st cause of death", include_blank: true}, :class => "edta-select"
 
@@ -30,13 +30,13 @@
 
       = f.label :death_details, "Notes/Details"
       = f.text_field :death_details
-      
+
       = submit_tag "Save Cause of Death", class: "button tiny right save"
 
-      = link_to "Cancel", modality_patient_path(@patient), class: "button tiny left cancel"
+      = link_to "Cancel", new_patient_patient_modality_path(@patient), class: "button tiny left cancel"
 
 .wide-screen
-  = content_for :secondary_nav do  
+  = content_for :secondary_nav do
     = render partial: "patients/clin_sum_sub_nav", locals: { model: @patient }
 
- 
+
